fix(assets): white table background, align rows

--- a/src/components/AssetsResultsCount/AssetsResultsCount.scss
+++ b/src/components/AssetsResultsCount/AssetsResultsCount.scss
@@ -1,6 +1,8 @@
 @import 'edx-bootstrap';
 
 .result-count-wrapper {
-  padding: 1.0rem;
+  padding-left: 1.0rem;
+  padding-right: 1.0rem;
+  padding-bottom: 1.0rem;
 }
 
