--- a/src/components/AssetsSearch/AssetsSearch.scss
+++ b/src/components/AssetsSearch/AssetsSearch.scss
@@ -1,5 +1,9 @@
 @import 'edx-bootstrap';
 
+.form-inline {
+  margin-bottom: 0;
+}
+
 .form-inline label {
   margin-right: 1.0rem;
   font-weight: 600;
