--- a/src/components/AssetsTable/AssetsTable.scss
+++ b/src/components/AssetsTable/AssetsTable.scss
@@ -16,12 +16,24 @@
   color: theme-color('dark');
 }
 
+.table {
+  // Styling from studio's ui-window mixin
+  border-radius: 2px;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+  background-color: white;
+  border: 1px solid #b2b2b2;
+}
+
 .table th span, .table td span {
   word-wrap: break-word;
 }
 
 .table th button {
   font-weight: bold;
+}
+
+.table caption {
+  padding: 0;
 }
 
 // TODO: figure out how to receive these styles from Paragon instead of this copy-and-paste
